--- a/index1.html
+++ b/index1.html
@@ -128,7 +128,7 @@
                     <div class="p-6">
                         <h3 class="text-xl font-bold text-gray-800 mb-2">Tech & Innovation</h3>
                         <p class="text-gray-600 mb-4">Startups using AI, robotics & cutting-edge solutions to change the world.</p>
-                        <a href="tech1.html" class="text-blue-600 font-medium hover:text-blue-800 flex items-center transition duration-300">
+                        <a href="tech1.php" class="text-blue-600 font-medium hover:text-blue-800 flex items-center transition duration-300">
                             Explore sector <i class="fas fa-chevron-right ml-2 text-sm"></i>
                         </a>
                     </div>
@@ -142,7 +142,7 @@
                     <div class="p-6">
                         <h3 class="text-xl font-bold text-gray-800 mb-2">Sustainability</h3>
                         <p class="text-gray-600 mb-4">Eco-innovations promoting green living, clean energy & conservation.</p>
-                        <a href="envi1.html" class="text-blue-600 font-medium hover:text-blue-800 flex items-center transition duration-300">
+                        <a href="envi1.php" class="text-blue-600 font-medium hover:text-blue-800 flex items-center transition duration-300">
                             Explore sector <i class="fas fa-chevron-right ml-2 text-sm"></i>
                         </a>
                     </div>
@@ -156,7 +156,7 @@
                     <div class="p-6">
                         <h3 class="text-xl font-bold text-gray-800 mb-2">Food & Beverage</h3>
                         <p class="text-gray-600 mb-4">Innovating with culinary trends, delivery tech & sustainable packaging.</p>
-                        <a href="food1.html" class="text-blue-600 font-medium hover:text-blue-800 flex items-center transition duration-300">
+                        <a href="food1.php" class="text-blue-600 font-medium hover:text-blue-800 flex items-center transition duration-300">
                             Explore sector <i class="fas fa-chevron-right ml-2 text-sm"></i>
                         </a>
                     </div>
@@ -170,7 +170,7 @@
                     <div class="p-6">
                         <h3 class="text-xl font-bold text-gray-800 mb-2">Health & Wellness</h3>
                         <p class="text-gray-600 mb-4">Focusing on fitness, mental health, and tech-powered healthcare.</p>
-                        <a href="health1.html" class="text-blue-600 font-medium hover:text-blue-800 flex items-center transition duration-300">
+                        <a href="health1.php" class="text-blue-600 font-medium hover:text-blue-800 flex items-center transition duration-300">
                             Explore sector <i class="fas fa-chevron-right ml-2 text-sm"></i>
                         </a>
                     </div>
@@ -184,7 +184,7 @@
                     <div class="p-6">
                         <h3 class="text-xl font-bold text-gray-800 mb-2">Finance & FinTech</h3>
                         <p class="text-gray-600 mb-4">Smart banking, blockchain, and investment startups driving fintech.</p>
-                        <a href="finance1.html" class="text-blue-600 font-medium hover:text-blue-800 flex items-center transition duration-300">
+                        <a href="finance1.php" class="text-blue-600 font-medium hover:text-blue-800 flex items-center transition duration-300">
                             Explore sector <i class="fas fa-chevron-right ml-2 text-sm"></i>
                         </a>
                     </div>
@@ -197,7 +197,7 @@
                     <div class="p-6">
                         <h3 class="text-xl font-bold text-gray-800 mb-2">Social Impact</h3>
                         <p class="text-gray-600 mb-4">Startups solving social issues through education, equity & action.</p>
-                        <a href="social1.html" class="text-blue-600 font-medium hover:text-blue-800 flex items-center transition duration-300">
+                        <a href="social1.php" class="text-blue-600 font-medium hover:text-blue-800 flex items-center transition duration-300">
                             Explore sector <i class="fas fa-chevron-right ml-2 text-sm"></i>
                         </a>
                     </div>
@@ -210,7 +210,7 @@
                     <div class="p-6">
                         <h3 class="text-xl font-bold text-gray-800 mb-2">E-commerce & Retail</h3>
                         <p class="text-gray-600 mb-4">Redefining digital shopping through AI, logistics & personalization.</p>
-                        <a href="e-com1.html" class="text-blue-600 font-medium hover:text-blue-800 flex items-center transition duration-300">
+                        <a href="e-com1.php" class="text-blue-600 font-medium hover:text-blue-800 flex items-center transition duration-300">
                             Explore sector <i class="fas fa-chevron-right ml-2 text-sm"></i>
                         </a>
                     </div>
@@ -223,7 +223,7 @@
                     <div class="p-6">
                         <h3 class="text-xl font-bold text-gray-800 mb-2">Entertainment & Media</h3>
                         <p class="text-gray-600 mb-4">Gaming, streaming, and creative startups engaging audiences globally.</p>
-                        <a href="media1.html" class="text-blue-600 font-medium hover:text-blue-800 flex items-center transition duration-300">
+                        <a href="media1.php" class="text-blue-600 font-medium hover:text-blue-800 flex items-center transition duration-300">
                             Explore sector <i class="fas fa-chevron-right ml-2 text-sm"></i>
                         </a>
                     </div>
@@ -365,14 +365,14 @@
                 <div class="space-y-4">
                     <h3 class="text-lg font-semibold">Events</h3>
                     <div class="grid grid-cols-2 gap-x-4 gap-y-2">
-                        <a href="tech1.html" class="text-gray-400 hover:text-white transition duration-300 block">Tech & Innovation</a>
-                        <a href="e-com1.html" class="text-gray-400 hover:text-white transition duration-300 block">E-commerce</a>
-                        <a href="envi1.html" class="text-gray-400 hover:text-white transition duration-300 block">Sustainability</a>
-                        <a href="finance1.html" class="text-gray-400 hover:text-white transition duration-300 block">FinTech</a>
-                        <a href="food1.html" class="text-gray-400 hover:text-white transition duration-300 block">Food & Beverage</a>
-                        <a href="social1.html" class="text-gray-400 hover:text-white transition duration-300 block">Social Impact</a>
-                        <a href="health1.html" class="text-gray-400 hover:text-white transition duration-300 block">Health & Wellness</a>
-                        <a href="media1.html" class="text-gray-400 hover:text-white transition duration-300 block">Entertainment</a>
+                        <a href="tech1.php" class="text-gray-400 hover:text-white transition duration-300 block">Tech & Innovation</a>
+                        <a href="e-com1.php" class="text-gray-400 hover:text-white transition duration-300 block">E-commerce</a>
+                        <a href="envi1.php" class="text-gray-400 hover:text-white transition duration-300 block">Sustainability</a>
+                        <a href="finance1.php" class="text-gray-400 hover:text-white transition duration-300 block">FinTech</a>
+                        <a href="food1.php" class="text-gray-400 hover:text-white transition duration-300 block">Food & Beverage</a>
+                        <a href="social1.php" class="text-gray-400 hover:text-white transition duration-300 block">Social Impact</a>
+                        <a href="health1.php" class="text-gray-400 hover:text-white transition duration-300 block">Health & Wellness</a>
+                        <a href="media1.php" class="text-gray-400 hover:text-white transition duration-300 block">Entertainment</a>
                     </div>
                 </div>
                 
@@ -416,6 +416,47 @@
     </footer>
 
     <script>
+        // Set a cookie with name, value, and expiry days
+        function setCookie(name, value, days) {
+            const date = new Date();
+            date.setTime(date.getTime() + (days * 24 * 60 * 60 * 1000)); // ms conversion
+            const expires = "expires=" + date.toUTCString();
+            document.cookie = name + "=" + encodeURIComponent(value) + ";" + expires + ";path=/";
+        }
+
+        // Get a cookie by name
+        function getCookie(name) {
+            const cname = name + "=";
+            const decodedCookie = decodeURIComponent(document.cookie);
+            const ca = decodedCookie.split(';');
+            for(let i = 0; i < ca.length; i++) {
+                let c = ca[i];
+                while (c.charAt(0) == ' ') {
+                    c = c.substring(1);
+                }
+                if (c.indexOf(cname) == 0) {
+                    return c.substring(cname.length, c.length);
+                }
+            }
+            return "";
+        }
+
+        // When the page loads
+        document.addEventListener("DOMContentLoaded", function () {
+            const searchInput = document.querySelector('input[placeholder*="Search"]');
+            if (!searchInput) return;
+
+            // Step A: Load cookie value into the search box
+            const savedSearch = getCookie("readyupSearch");
+            if (savedSearch !== "") {
+                searchInput.value = savedSearch;
+            }
+
+            // Step B: Save cookie when user types
+            searchInput.addEventListener("input", function () {
+                setCookie("readyupSearch", searchInput.value, 7); // Store for 7 days
+            });
+        });
         // Mobile menu toggle functionality
         document.addEventListener('DOMContentLoaded', function() {
             const mobileMenuButton = document.getElementById('mobileMenuButton');
@@ -464,6 +505,68 @@
                 sectorsExpanded = !sectorsExpanded;
             });
         });
+
+        document.addEventListener("DOMContentLoaded", function () {
+        const searchInput = document.querySelector('input[placeholder*="Search"]');
+        const searchButton = searchInput?.nextElementSibling;
+
+        // Redirect map for keywords
+        const redirectMap = {
+            "home": "index1.html",
+            "about": "about1.html",
+            "events": "index1.html#sectors",
+            "contact": "contact1.html",
+            "message": "contact1.html#message",
+            "customer care":"contact1.html#message",
+            "customer": "contact1.html#message",
+            "tech": "tech1.php",
+            "innovation": "tech1.php",
+            "sustainability": "envi1.php",
+            "sustainable": "envi1.php",
+            "sustainable development": "envi1.php",
+            "environment": "envi1.php",
+            "food": "food1.php",
+            "beverage": "food1.php",
+            "health": "health1.php",
+            "wellness": "health1.php",
+            "fintech": "finance1.php",
+            "finance": "finance1.php",
+            "financial": "finance1.php",
+            "social impact": "social1.php",
+            "social": "social1.php",
+            "impact": "social1.php",
+            "e-commerce": "e-com1.php",
+            "ecom": "e-com1.php",
+            "retail": "e-com1.php",
+            "entertainment": "media1.php",
+            "media": "media1.php"
+        };
+
+        function redirectBasedOnSearch() {
+            const query = searchInput.value.toLowerCase().trim();
+            for (const keyword in redirectMap) {
+                if (query.includes(keyword)) {
+                    window.location.href = redirectMap[keyword];
+                    return;
+                }
+            }
+            alert("No matching page found for your search.");
+        }
+
+        // Handle Enter key
+        searchInput.addEventListener("keypress", function (event) {
+            if (event.key === "Enter") {
+                event.preventDefault();
+                redirectBasedOnSearch();
+            }
+        });
+
+        // Handle search button click
+        searchButton?.addEventListener("click", function (event) {
+            event.preventDefault();
+            redirectBasedOnSearch();
+        });
+    });
     </script>
 </body>
 </html>
