--- a/about.html
+++ b/about.html
@@ -100,8 +100,8 @@
                 Explore breakthrough technologies, market trends, and intelligent insights.
             </p>
             <div class="flex flex-wrap justify-center gap-4">
-                <a href="#" class="bg-white text-blue-600 hover:bg-gray-100 font-semibold py-3 px-8 rounded-full transition duration-300">
-                    Get Started Now
+                <a href="#" onclick="handleGetStarted()" class="bg-blue-600 text-white hover:bg-blue-700 font-semibold py-3 px-8 rounded-full transition duration-300">
+                    Get Started for Free
                 </a>
             </div>
             <div class="mt-12 animate-bounce">
