--- a/addevent.html
+++ b/addevent.html
@@ -14,7 +14,7 @@
             color: transparent;
         }
         .hero-section {
-            background: linear-gradient(rgba(18, 24, 35, 0.85), rgba(18, 24, 35, 0.85)), url('back2.png');
+            background: linear-gradient(rgba(18, 24, 35, 0.85), rgba(18, 24, 35, 0.85)), url('images/back2.png');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -64,7 +64,7 @@
         <div class="container mx-auto px-4 py-3 flex justify-between items-center">
             <div class="flex items-center">
                 <a href="index1.php" class="flex items-center">
-                    <img src="Readyup.png" alt="ReadyUp Logo" class="h-10 w-10">
+                    <img src="images/Readyup.png" alt="ReadyUp Logo" class="h-10 w-10">
                     <span class="text-2xl font-bold text-white ml-2">Ready<span class="gradient-text">Up</span></span>
                 </a>
             </div>
